# SLAM_Map_Compression

./: .gitignore  CMakeLists.txt  README.md  build.sh
Examples/Monocular/: mono_tum.cc
Examples/RGB-D/: ICL.yaml  rgbd_tum_loadmap.cc  rgbd_tum_localize.cc  rgbd_tum_savemap.cc
Examples/Stereo/: EuRoC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  stereo_euroc_localize.cc  stereo_euroc_savemap.cc  stereo_kitti_localize.cc  stereo_kitti_savemap.cc
Examples/Stereo/EuRoC_TimeStamps/: MH01.txt  MH02.txt  MH03.txt  MH04.txt  MH05.txt  V101.txt  V102.txt  V103.txt  V201.txt  V202.txt  V203.txt
Examples/Tools/: slam_compress_map  slam_compress_map.cc
cmake_modules/: FindGUROBI.cmake
include/: Converter.h  Frame.h  KeyFrame.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBmatcher.h  System.h  Tracking.h  Viewer.h
src/: Converter.cc  Frame.cc  KeyFrame.cc  KeyFrameDatabase.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  System.cc  Tracking.cc  Viewer.cc
